[package]
name = "payments_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
csv = "1.3.1"
rust_decimal = { version = "1.37.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
rust_decimal_macros = "1.37.1"
